cmake_minimum_required(VERSION 3.0)

add_subdirectory (Core)
add_subdirectory (Geometry)
add_subdirectory (Loaders)
add_subdirectory (Renderers)
add_subdirectory (Utilities)
add_subdirectory (UI)
add_subdirectory (WindowMgt)

MESSAGE( " BEFORE ALL FILES : " ${ALL_AT_FRAMEWORK_SRC})

SET(CORE_SRCS ${CORE_SRC_FILES} PARENT_SCOPE)
SET(GEOMETRY_SRCS ${GEOMETRY_SRC_FILES} PARENT_SCOPE)
SET(LOADERS_SRCS ${LOADERS_SRC_FILES} PARENT_SCOPE)
SET(RENDERERS_SRCS ${RENDERERS_SRC_FILES} PARENT_SCOPE)
SET(UTILITIES_SRCS ${UTILITIES_SRC_FILES} PARENT_SCOPE)
SET(UI_SRCS ${UI_SRC_FILES} PARENT_SCOPE)
SET(WINDOWMGT_SRCS ${WINDOWMGT_SRC_FILES} PARENT_SCOPE)

MESSAGE( " LOADER FILES : " ${LOADERS_SRCS})

SET(ALL_AT_FRAMEWORK_SRC 
	
	${CORE_SRC_FILES}
	${GEOMETRY_SRC_FILES}
	${LOADERS_SRC_FILES}
	${RENDERERS_SRC_FILES}
	${UTILITIES_SRC_FILES}
	${UI_SRC_FILES}
	${WINDOWMGT_SRC_FILES} PARENT_SCOPE)
	
SET( ALL_AT_INCLUDE_DIRS
		
	${CORE_INCLUDE_FILES}
	${GEOMETRY_INCLUDE_FILES}
	${LOADERS_INCLUDE_FILES}
	${RENDERERS_INCLUDE_FILES}
	${UTILITIES_INCLUDE_FILES}
	${UI_INCLUDE_FILES}
	${WINDOWMGT_INCLUDE_FILES} PARENT_SCOPE)
	
	
MESSAGE( " ALL FILES : " ${ALL_AT_FRAMEWORK_SRC})